connect to database to fetch hotels allow function for POST to api/reservations/

--- a/app/src/main/res/layout/hotel_search.xml
+++ b/app/src/main/res/layout/hotel_search.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="20dp">
 
     <ScrollView
         android:id="@+id/scroll_view"
@@ -21,7 +22,6 @@
                 android:id="@+id/title_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/welcome_text"
                 android:textAlignment="center"
