--- a/app/src/main/res/layout/hotel_list_item.xml
+++ b/app/src/main/res/layout/hotel_list_item.xml
@@ -3,30 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="20dp">
+    android:paddingStart="10dp"
+    android:paddingTop="10dp"
+    android:paddingEnd="10dp"
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/hotel_name_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/hotel_address_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/hotel_name_text_view"
+        app:layout_constraintTop_toBottomOf="@id/hotel_name_text_view" />
 
     <TextView
         android:id="@+id/hotel_price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_marginTop="5dp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@id/hotel_name_text_view"
-        app:layout_constraintTop_toBottomOf="@id/hotel_name_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/hotel_address_text_view" />
 
     <TextView
         android:id="@+id/hotel_availability_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/hotel_price_text_view"
-        app:layout_constraintTop_toBottomOf="@id/hotel_price_text_view" />
+        android:layout_marginStart="20dp"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@id/hotel_price_text_view"
+        app:layout_constraintTop_toTopOf="@id/hotel_price_text_view" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
