--- a/app/src/main/res/layout/reservation_form.xml
+++ b/app/src/main/res/layout/reservation_form.xml
@@ -6,13 +6,12 @@
     android:layout_marginTop="20dp">
 
     <TextView
-        android:id="@+id/title_text_view"
+        android:id="@+id/reservation_form_title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="@string/welcome_text"
-        android:textAlignment="center"
-        android:textColor="@color/black"
+        android:gravity="center"
+        android:text="@string/reservation"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,28 +25,24 @@
         android:layout_marginEnd="10dp"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />
-
-    <TextView
-        android:id="@+id/hotel_list_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:text="@string/hotel_list"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/info_text_view"
-        app:layout_constraintTop_toBottomOf="@id/info_text_view" />
-
+        app:layout_constraintTop_toBottomOf="@+id/reservation_form_title_text_view" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/hotel_list_recycler_view"
+        android:id="@+id/guest_list_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hotel_list_text_view" />
+        app:layout_constraintEnd_toEndOf="@id/info_text_view"
+        app:layout_constraintStart_toStartOf="@+id/info_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/info_text_view" />
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="@string/submit"
+        app:layout_constraintStart_toStartOf="@id/info_text_view"
+        app:layout_constraintTop_toBottomOf="@id/guest_list_recycler_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
