--- a/app/src/main/res/layout/hotel_list.xml
+++ b/app/src/main/res/layout/hotel_list.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:textSize="18sp"
+        android:typeface="monospace"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view" />
 
